--- a/avenger-4.html
+++ b/avenger-4.html
@@ -9,7 +9,7 @@
         <a href=about.html>About</a>
         <a href="contact.html">Contact</a>
         </div>
-        <h2>Thor</h2>
+        <h2>HawkEye</h2>
     <div class="gallery">
         <img src="images/avengers_04.jpg" />
         </div>
